namespace TheBitCave.BattleRoyale.WeaponSystem
{
    /// <summary>
    /// A list of values used to pass parameters to the Animator component
    /// </summary>
    public enum AttackAnimatorParameter
    {
        ShootTwoHanded,
        ShootOneHanded,
        CloseCombatTwoHanded,
        CloseCombatOneHanded,
        Throw,
        CastOneHanded,
        CastTwoHanded,
        ShootBow
    }
    
}
