namespace TheBitCave.MultiplayerRoguelite
{
    public partial class C
    {
        public const string ANIMATOR_PARAMETER_SPEED = "Speed";
        public const string ANIMATOR_PARAMETER_MELEE = "Melee";
        public const string ANIMATOR_PARAMETER_SHOOT = "Shoot";
        public const string ANIMATOR_PARAMETER_THROW = "Throw";
        public const string ANIMATOR_PARAMETER_CAST = "Cast";
        public const string ANIMATOR_PARAMETER_DIE = "Die";
    }
}