namespace TheBitCave.MultiplayerRoguelite.WeaponSystem
{
    /// <summary>
    /// A list of values used to pass parameters to the Animator component
    /// </summary>
    public enum AttackAnimatorParameter
    {
        ShootTwoHanded,
        ShootOneHanded,
        CloseCombatTwoHanded,
        CloseCombatOneHanded,
        Throw,
        CastOneHanded,
        CastTwoHanded
    }
    
}
